--- a/ui/src/components/navbar/Navbar.scss
+++ b/ui/src/components/navbar/Navbar.scss
@@ -11,6 +11,7 @@
     &.active{
         background-color: white;
         color: black;
+        
     }
     
     .container{
@@ -33,7 +34,7 @@
             gap: 24px;
             align-items: center;
             font-weight: 500;
-            button{
+            .button{
                 color: white;
                 padding: 10px 20px;
                 border-radius: 5px;
@@ -43,6 +44,18 @@
                 &:hover{
                     background-color: #1dbf73;
                     border-color: #1dbf73;
+                }
+                &.active{
+                    background-color: white;
+                    color: black;
+                    border: 1px solid gray;
+                    &:hover{
+                        color: white;
+                        background-color: #1dbf73;
+                        border-color: #1dbf73;
+                        border: 1px solid white;
+                    }
+                    
                 }
 
             }
